--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     this is a demo site
+    <a href="./sampleData.json">json</a>
+    <link rel="stylesheet" href="./sampleData.json">
 </body>
 </html>
